fixes bug for stretched images that were originally quite small

--- a/Source/WFPreviewScreen.scss
+++ b/Source/WFPreviewScreen.scss
@@ -244,15 +244,18 @@ p img, a img {
 	margin-left: auto;
 	margin-right: auto;
 	
-	border: 4px solid white;
+	//	border: 4px solid white;
+	//	@include box-shadow(rgba(0, 0, 0, .125) 0px 1px 2px);
 	
-	width: 100% !important;
+	-webkit-filter: drop-shadow(rgba(0, 0, 0, .125) 0px 1px 2px);
+	
+	max-width: 100% !important;
+	width: auto !important;
 	height: auto !important;
 	
 	margin-top: 1em;
 	margin-bottom: 1em;
 	
-	@include box-shadow(rgba(0, 0, 0, .125) 0px 1px 2px);
 
 }
 
